# rust_torrent

./: Cargo.toml  README.md
libs/torrent-search-rs/: Cargo.toml
libs/torrent-search-rs/src/: lib.rs
src/: bytes.rs  constants.rs  file_manager.rs  main.rs  manager.rs  metainfo.rs  peer.rs  peer_info.rs  torrent.rs
torrents/: linux-mint.torrent  linux_mint.torrent  simple.torrent  test.torrent  test_torrent.torrent  testing.torrent  ubuntu_test.torrent
