[package]
name = "rust_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
# panic = "abort"
# debug = true


[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
sha1 = "0.10.4"
# bytes = "1.1.0"
anyhow = "1.0.63"
bip_bencode = "0.4.4"
rand = "0.8.5"
reqwest = "0.11.11"
urlencoding = "2.1.2"
futures = "0.3.24"
rayon = "1.5.3"
